added all things

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orientation Quiz</title>
     <link rel="stylesheet" href="home.css" type="text/css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,14 +28,8 @@
 
 
     <div class="bodyContainer" id="bodyContainer">
-
-        <!-- <div class="winner-section">
-            <h1 id="congrats">Congratulations to Our First Position Holder!</h1>
-            <p>As a token of appreciation, here is a special coupon code just for you:</p>
-            <p>Click Given Code to copy it.</p>
-                <button type="button" class="couponcode">CODE1234</button>
-            <p>Use this code at Zomato to enjoy your reward!</p>
-        </div> -->
+        
+        
 
 
         <div class="container">
